2011-12-04  Helmut Eller  <heller@common-lisp.net>

	* swank-repl.lisp: New file.
	* slime-repl.el (slime-repl): Add swank-dependecy.

2011-12-03  Didier Verna  <didier@xemacs.org>

       * slime-cl-indent.el (common-lisp-loop-type)
       (common-lisp-loop-part-indentation)
       (common-lisp-indent-body-introducing-loop-macro-keyword)
       (common-lisp-indent-prefix-loop-macro-keyword)
       (common-lisp-indent-clause-joining-loop-macro-keyword)
       (common-lisp-indent-indented-loop-macro-keyword)
       (common-lisp-indent-indenting-loop-macro-keyword)
       (common-lisp-indent-loop-macro-else-keyword)
       (common-lisp-indent-loop-macro-1): Match not only KEYWORD but also
       :KEYWORD and #:KEYWORD in the LOOP macro.

2011-12-03  Didier Verna  <didier@xemacs.org>

       * slime-cl-indent.el (lisp-indent-lambda-list-keywords-regexp):
       Match empty string after a word consitituent (\>) instead of a
       symbol constituent (\_>) because XEmacs doesn't have that syntax,
       and here, it doesn't hurt anyway.

2011-12-03  Helmut Eller  <heller@common-lisp.net>

	* swank-mrepl.lisp (package-prompt): Use <= instead of < to give
	package-name priority over nicknames.

2011-12-02  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-send-input): Don't put `read-only'
	property on an overlay, overlays don't support it.

2011-12-02  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm (inspect-obj-ref): Use for instead of iter.

2011-12-02  Helmut Eller  <heller@common-lisp.net>

	* slime-mrepl.el: Drop dependency on slime-repl. Use comint
	instead.

2011-12-02  Helmut Eller  <heller@common-lisp.net>

	* swank-mrepl.lisp: New file.

2011-12-01  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm (mangled-name): Try to deal unnamed lambdas.
	(inspect): Split up into inspect-array-ref and inspect-obj-ref.
	(inspect-array-ref): New.
	(inspect-obj-ref): New. Include methods in result.
